# ComfyUI-d2-send-eagle

./: .gitignore  D2_SendEagle.py  README.md  README_ja.md  README_zh.md  __init__.py  config.org.yaml  my_types.py  pyproject.toml
modules/: eagle_api.py  params_extractor.py  prompt_info_extractor.py  util.py
