[project]
name = "comfyui-d2-send-eagle"
description = "This is a custom node for sending images generated in ComfyUI to the image management software Eagle. It's an extension of an existing custom node called [a/ComfyUI-send-eagle-slim](https://github.com/shingo1228/ComfyUI-send-eagle-slim), modified to suit my preferences. I'm grateful to Shingo.T for creating the excellent original custom node."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/da2el-ai/ComfyUI-d2-send-eagle"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-d2-send-eagle"
Icon = ""
