[project]
name = "comfyui-d2-send-eagle"
description = "Send generated images to Eagle"
version = "1.5.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/da2el-ai/ComfyUI-d2-send-eagle"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "da2el"
DisplayName = "ComfyUI-d2-send-eagle"
Icon = ""
